# ragent

./: .gitignore  CHALLENGE.md  Dockerfile  LICENSE.MD  README.MD  pyproject.toml
src/ragent/: __init__.py  agent.py  evaluation.py  model.py  retriever.py
src/ragent/retrievers/: __init__.py  base.py  wikipedia.py
